--- a/src/main/resources/static/css/main1.css
+++ b/src/main/resources/static/css/main1.css
@@ -218,13 +218,34 @@ button.accent {
     list-style-type: none;
     background-color: #FFF;
     margin: 0;
-    overflow-y: auto; /* Enable vertical scrolling */
+    overflow-y: auto;
     padding: 0 20px 0px 20px;
-    height: auto; /* Ensure height is auto to grow with content up to max-height */
-    max-height: 500px; /* Maximum height before scrolling */
+    height: auto;
+    max-height: 500px;
 }
 
+.btn {
+    cursor: pointer;
+    padding: 8px 20px;
+    outline: none;
+    text-decoration: none;
+    font-size: 15px;
+    letter-spacing: 0.5px;
+    transition: all 0.3s;
+    border-radius: 25px;
+    font-family: "Inter", sans-serif;
+    width: 200px;
+  }
+  
+  .btn:hover {
+    background-color: #269714;
+    box-shadow: none;
+    transition: all 0.5s;
+  }
 
+  .btn-creamy {
+    background-color: #36e11b;
+  }
 
 @media screen and (max-width: 730px) {
 
